# modeltrack

./: .coveragerc  .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  ModelTrack_Roadmap.ipynb  README.md  docker-compose.yml  exp_cris_deteccao_diabetes_autolog.py  pyproject.toml  requirements.in  requirements.txt  setup.md  setup.py  test.sh  teste_pyspark.py
.github/workflows/: publish-testpypi.yml  python-tests.yml
examples/: file01.ipynb
examples/artifacts_pipeline/: binner.json  encoder.json
src/modeltrack/feature_engineering/: __init__.py  base.py  binning.py  encoder.py  feature_pipeline.py
src/modeltrack/features/: base.py  binning.py
src/modeltrack/models/: model_builder.py
src/modeltrack/utils/: __init__.py  dataframe_adapter.py  utils.py
tests/: test_binner.py  test_encoder.py  test_feature_pipeline.py  test_features.py  test_utils.py
