[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "modeltrack"
version = "2025.8.18"
description = "Python package for experimental design analysis (ExpDes-like)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

authors = [
    {name = "Cristiano Oliveira", email = "cristiano2132.ufv@gmail.com"}
]

maintainers = [
    {name = "Cristiano Oliveira", email = "cristiano2132.ufv@gmail.com"}
]


keywords = ["experimental design", "ANOVA", "statistics", "ExpDes"]

dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "statsmodels",
    "scikit-posthocs",
    "matplotlib",
    "seaborn",
    "tabulate",
    "pyspark",
    "scikit-learn"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "twine",
    "build",
    "black",
    "ruff"
]

[project.urls]
Repository = "https://github.com/cristiano2132/modeltrack"


[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
branch = true
source = ["modeltrack"]
[tool.coverage.report]
show_missing = true
fail_under = 80